# genai-project

./: Dockerfile.backend  README.md  create_relationships.cypher  docker-compose.yml  dummy_data_setup.cypher  pyproject.toml  query_examples.yml  run_local.sh
app/: agentservice.py  main.py
app/frontend/: ui.py
app/llm/: __init__.py  base_adapter.py  langchain_adapter.py  neo4j_adapter.py  registry.py
app/pydantictypes/: __init__.py  type.py
app/retrievers/: __init__.py  text2cypher_builder.py  vector_builder.py
app/routers/: __init__.py  router.py
app/utils/: query_examples.py
app/ws02integration/: __init__.py  basic_connection_test.py  cbre_azure_chat_openai.py  cbre_azureopenai_utils.py  simple_embedding_test.py
graph_build/: graph_extractor.py  graphrag_graph_extractor.py  main.py  pdf_extractor.py  structured_graph_build.py  utils.py
graph_build/data/structured/: LabPRODUCT.xlsx
tests/: test_main.py
